--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "perfect-scrollbar": "^1.5.5",
         "vue": "^3.2.36",
-        "vue-router": "^4.2.4"
+        "vue-router": "^4.2.4",
+        "ziggy": "^2.4.0",
+        "ziggy-js": "^1.6.1"
     }
 }
